--- a/src/components/CurrentLeagues/CurrentLeagues.css
+++ b/src/components/CurrentLeagues/CurrentLeagues.css
@@ -1,15 +1,15 @@
 .current-leagues-card {
   background-color: #ffffff; 
   color: #333; 
-  padding: 40px;
+  padding: 20px;
   margin: 0; 
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  width: 100%; 
-  height: 100%; 
+  width: 300px;
+  height: 300px;
   transition: transform 0.3s ease, box-shadow 0.3s ease; 
-  overflow-y: auto; 
+  overflow-y: auto !important; 
 }
 
 .current-leagues-card:hover {
@@ -18,8 +18,8 @@
 }
 
 .league-circle {
-  width: 100px; 
-  height: 100px; 
+  width: 90px;
+  height: 90px; 
   background-color: #2980b9; 
   color: #ffffff;
   border-radius: 50%;
@@ -35,7 +35,7 @@
 }
 
 .league-text {
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .current-leagues-card::-webkit-scrollbar {
@@ -51,5 +51,6 @@
   background-color: #f1f1f1;
   border-radius: 10px;
 }
+
 
 
