--- a/src/components/NotificationsAndUpdates/NotificationsAndUpdates.css
+++ b/src/components/NotificationsAndUpdates/NotificationsAndUpdates.css
@@ -6,17 +6,12 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  width: 100%; 
-  height: 300px; 
-  overflow-y: auto; 
+  width: 45%; 
+  height: 400px; 
+  overflow-y: auto !important; 
   transition: transform 0.3s ease, box-shadow 0.3s ease; 
   display: flex;
   flex-direction: column;
-}
-
-.notifications-card .MuiCardContent-root {
-  flex: 1;
-  overflow-y: auto;
 }
 
 .notifications-card:hover {
