--- a/src/components/PitchLayout/PitchLayout.css
+++ b/src/components/PitchLayout/PitchLayout.css
@@ -5,6 +5,8 @@
     position: relative;
     width: 100%;
     height: 100%;
+    margin-left: 170px;
+    margin-top: 110px;
 }
   
 .position {
@@ -18,6 +20,7 @@
     text-align: center;
     width: 60px;
     height: 60px;
+    margin-top: 20px;
 }
   
 
