--- a/src/pages/Draft/Draft.css
+++ b/src/pages/Draft/Draft.css
@@ -1,20 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+/* src/pages/Draft/Draft.css */
+.draft-container {
     background-image: url('../../assets/images/pitch.webp');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    width: 100%;
+    height: 100vh; /* Make sure the container takes the full height of the viewport */
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.draft-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
     text-align: center;
     color: white;
 }
@@ -56,7 +49,6 @@ button:hover {
     transform: translate(-50%, -50%);
     width: 90%;
 }
-
 
 
 
