--- a/src/components/CurrentLeagues/CurrentLeagues.css
+++ b/src/components/CurrentLeagues/CurrentLeagues.css
@@ -1,32 +1,34 @@
 .current-leagues-card {
-  background-color: #ffffff; 
-  color: #333; 
+  background-color: #ffffff;
+  color: #333;
   padding: 20px;
-  margin: 0; 
+  margin: 0;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   width: 300px;
   height: 300px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; 
-  overflow-y: auto !important; 
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
+  overflow-y: auto !important;
 }
 
 .current-leagues-card:hover {
-  transform: translateY(-5px); 
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .league-circle {
   width: 90px;
-  height: 90px; 
-  background-color: #2980b9; 
+  height: 90px;
+  background-color: #2980b9;
   color: #ffffff;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px auto; 
+  margin: 20px auto;
   transition: background-color 0.3s ease;
 }
 
@@ -51,6 +53,3 @@
   background-color: #f1f1f1;
   border-radius: 10px;
 }
-
-
-
