--- a/src/pages/Dashboard/DashboardLayout.css
+++ b/src/pages/Dashboard/DashboardLayout.css
@@ -1,5 +1,6 @@
 .dashboard {
-  background: url('../../assets/images/Dashboard-background1.png') no-repeat center center fixed;
+  background: url('../../assets/images/Dashboard-background1.png') no-repeat
+    center center fixed;
   background-size: cover;
   height: 100vh;
   padding-top: 64px;
@@ -23,4 +24,3 @@
   margin: 20px;
   min-width: 250px;
 }
-
